react 学习第一天

--- a/js权威指南/index.html
+++ b/js权威指南/index.html
@@ -66,11 +66,17 @@
 					break mass;
 			}			
 			mass:console.log("跳转到这里");*/
-			var matrix=[[1,2,3],[3,3,2],['s',1,2]]
+			var matrix=[[1,2,3],[3,3,2],['s',1,2]];
+			var sum=0,success=false;
+			
 		</script>
 	</head>
 	<body>
 		<a href="javascript:void window.open();">打开一个新窗口</a>
 		<a href="#" onclick="window.close()">关闭窗口</a>
+		<fieldset>
+		 	<legend>注册表</legend>
+			用户名：<input type="text" name="user" value="">
+		</fieldset>
 	</body>
 </html>
