--- a/表单事件.html
+++ b/表单事件.html
@@ -28,5 +28,11 @@
 				})
 			})
 		</script>
-	</body>
+          <fieldset>
+              <legend>表单分组说明</legend> 
+               <label for="user">用户名：</label>
+               <input type="text" name="user" id="user" value="">
+          </fieldset>
+	</body>    
+
 </html>
