--- a/html5实例/about(pc).html
+++ b/html5实例/about(pc).html
@@ -14,10 +14,10 @@
 			<h1 class="none">网站导航</h1>
 			<ul>
 				<li><a href="index(pc).html">首页</a></li>
-				<li class="active"><a href="information(pc).html">旅游资讯</a></li>
-				<li><a href="ticket(pc).html" >机票订购</a></li>
+				<li><a href="information(pc).html">旅游资讯</a></li>
+				<li><a href="ticket(pc).html">机票订购</a></li>
 				<li><a href="scencry(pc).html">风景欣赏</a></li>
-				<li><a href="about(pc).html#">公司简介</a></li>
+				<li class="active"><a href="about(pc).html">公司简介</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -94,45 +94,26 @@
 			</div>
 		</div>
 	</aside>
-	<div class="list information">
-		<div class="infor">
-			<ul class="left">
-				<li><a href="###">限时特价</a></li>
-				<li><a href="###">热门推荐</a></li>
-			</ul>
-			<ul class="right">
-				<li><a href="###" class="selected">推荐</a></li>
-				<li><a href="###">折扣</a></li>
-				<li><a href="###">价格</a></li>
-			</ul>
-		</div>
-		<div class="tour">
-			<figure>
-				<img src="images/tour1.jpg" alt="曼谷一日游">
-				<figcaption>
-					<article>
-						<header>
-							<hgroup>
-								<h2>曼谷芭提雅一日游</h2>
-								<h3>包团特惠，超丰富景点</h3>
-							</hgroup>
-						</header>
-						<ol>
-							<li><mark>交通</mark>：</li>
-							<li><mark>团期</mark>：</li>
-						</ol>
-						<div class="buy">
-							<div class="price">￥<strong>3980</strong><s>原价 ￥10000</s></div>
-							<div class="reserve"><a href="#">立即抢购</a></div>
-						</div>
-						<div class="disc"><span>4.7折</span></div>
-						<footer>本团由web瓢城俱乐部所有,截止于<time>2016-12-31</time></footer>
-					</article>
-				</figcaption>
-			</figure>
-			
-			<div class="more">加载更多。。。</div>
-		</div>
+	<div class="list about">
+		<section>
+			<h2>关于我们</h2>
+			<p>百度文库生活休闲宇宙的九大定律四大原则_生活休闲暂无评价|0人阅读|0次下载|举报文档宇宙的九大定律四大原则_生活休闲。宇宙的九大定律四大原则o大一、...</p>
+			<p>百度文库生活休闲宇宙的九大定律四大原则_生活休闲暂无评价|0人阅读|0次下载|举报文档宇宙的九大定律四大原则_生活休闲。宇宙的九大定律四大原则 o 大 一、...</p>
+			<p>百度文库生活休闲宇宙的九大定律四大原则_生活休闲暂无评价|0人阅读|0次下载|举报文档宇宙的九大定律四大原则_生活休闲。宇宙的九大定律四大原则 o 大 一、...</p>
+		</section>
+		<p>&nbsp;</p>
+		<section>
+			<h2>联系方式</h2>
+			<address>
+				<ul>
+					<li>1</li>
+					<li>2</li>
+					<li>3</li>
+					<li>4</li>
+				</ul>
+			</address>
+		</section>
+		
 	</div>
 </div>
 
