--- a/html5实例/index(pc).html
+++ b/html5实例/index(pc).html
@@ -15,9 +15,9 @@
 			<ul>
 				<li class="active"><a href="index(pc).html">首页</a></li>
 				<li><a href="information(pc).html">旅游资讯</a></li>
-				<li><a href="#">机票订购</a></li>
-				<li><a href="#">风景欣赏</a></li>
-				<li><a href="#">公司简介</a></li>
+				<li><a href="ticket(pc).html">机票订购</a></li>
+				<li><a href="scencry(pc).html">风景欣赏</a></li>
+				<li><a href="about(pc).html">公司简介</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -38,101 +38,101 @@
 		<img src="images/tour1.jpg">
 		<figcaption>
 			<strong class="title">&lt;南京中山陵半日游&gt;</strong>fhaueoabndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字
+			<div class="info">
+				<em class="sat">满意度 77%</em>
+				<span class="price">￥<strong>9803</strong>元起</span>
+			</div>
+			<div class="type">国际长线</div>
 		</figcaption>
-		<div>
-			<em class="sat">满意度 77%</em>
-			<span class="price">￥<strong>9803</strong>元起</span>
-		</div>
-		<div class="type">国际长线</div>
 	</figure>
 	<figure>
 		<img src="images/tour1.jpg">
 		<figcaption>
 			<strong class="title">&lt;南京中山陵半日游&gt;</strong>fhaueoabndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字
+			<div class="info">
+				<em class="sat">满意度 77%</em>
+				<span class="price">￥<strong>9803</strong>元起</span>
+			</div>
+			<div class="type">国际长线</div>
 		</figcaption>
-		<div>
-			<em class="sat">满意度 77%</em>
-			<span class="price">￥<strong>9803</strong>元起</span>
-		</div>
-		<div class="type">国际长线</div>
 	</figure>
 	<figure>
 		<img src="images/tour1.jpg">
 		<figcaption>
 			<strong class="title">&lt;南京中山陵半日游&gt;</strong>fhaueoabndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字
+			<div class="info">
+				<em class="sat">满意度 77%</em>
+				<span class="price">￥<strong>9803</strong>元起</span>
+			</div>
+			<div class="type">国际长线</div>
 		</figcaption>
-		<div>
-			<em class="sat">满意度 77%</em>
-			<span class="price">￥<strong>9803</strong>元起</span>
-		</div>
-		<div class="type">国际长线</div>
 	</figure>
 	<figure>
 		<img src="images/tour1.jpg">
 		<figcaption>
 			<strong class="title">&lt;南京中山陵半日游&gt;</strong>fhaueoabndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字
+			<div class="info">
+				<em class="sat">满意度 77%</em>
+				<span class="price">￥<strong>9803</strong>元起</span>
+			</div>
+			<div class="type">国际长线</div>
 		</figcaption>
-		<div>
-			<em class="sat">满意度 77%</em>
-			<span class="price">￥<strong>9803</strong>元起</span>
-		</div>
-		<div class="type">国际长线</div>
 	</figure>
 	<figure>
 		<img src="images/tour1.jpg">
 		<figcaption>
 			<strong class="title">&lt;南京中山陵半日游&gt;</strong>fhaueoabndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字
+			<div class="info">
+				<em class="sat">满意度 77%</em>
+				<span class="price">￥<strong>9803</strong>元起</span>
+			</div>
+			<div class="type">国际长线</div>
 		</figcaption>
-		<div>
-			<em class="sat">满意度 77%</em>
-			<span class="price">￥<strong>9803</strong>元起</span>
-		</div>
-		<div class="type">国际长线</div>
 	</figure>
 	<figure>
 		<img src="images/tour1.jpg">
 		<figcaption>
 			<strong class="title">&lt;南京中山陵半日游&gt;</strong>fhaueoabndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字
+			<div class="info">
+				<em class="sat">满意度 77%</em>
+				<span class="price">￥<strong>9803</strong>元起</span>
+			</div>
+			<div class="type">国际长线</div>
 		</figcaption>
-		<div>
-			<em class="sat">满意度 77%</em>
-			<span class="price">￥<strong>9803</strong>元起</span>
-		</div>
-		<div class="type">国际长线</div>
 	</figure>
 	<figure>
 		<img src="images/tour1.jpg">
 		<figcaption>
 			<strong class="title">&lt;南京中山陵半日游&gt;</strong>fhaueoabndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字
+			<div class="info">
+				<em class="sat">满意度 77%</em>
+				<span class="price">￥<strong>9803</strong>元起</span>
+			</div>
+			<div class="type">国际长线</div>
 		</figcaption>
-		<div>
-			<em class="sat">满意度 77%</em>
-			<span class="price">￥<strong>9803</strong>元起</span>
-		</div>
-		<div class="type">国际长线</div>
 	</figure>
 	<figure>
 		<img src="images/tour1.jpg">
 		<figcaption>
 			<strong class="title">&lt;南京中山陵半日游&gt;</strong>fhaueoabndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字
+			<div class="info">
+				<em class="sat">满意度 77%</em>
+				<span class="price">￥<strong>9803</strong>元起</span>
+			</div>
+			<div class="type">国际长线</div>
 		</figcaption>
-		<div>
-			<em class="sat">满意度 77%</em>
-			<span class="price">￥<strong>9803</strong>元起</span>
-		</div>
-		<div class="type">国际长线</div>
 	</figure>
 	<figure>
 		<img src="images/tour1.jpg">
 		<figcaption>
 			<strong class="title">&lt;南京中山陵半日游&gt;</strong>fhaueoabndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字ndi中文汉字
+			<div class="info">
+				<em class="sat">满意度 77%</em>
+				<span class="price">￥<strong>9803</strong>元起</span>
+			</div>
+			<div class="type">国际长线</div>
 		</figcaption>
-		<div>
-			<em class="sat">满意度 77%</em>
-			<span class="price">￥<strong>9803</strong>元起</span>
-		</div>
-		<div class="type">国际长线</div>
-	</figure>	
+	</figure>
 </div>
 
 <footer id="footer">
