--- a/html5实例/移动端/information(pc).html
+++ b/html5实例/移动端/information(pc).html
@@ -16,8 +16,8 @@
 				<li><a href="index(pc).html">首页</a></li>
 				<li class="active"><a href="information(pc).html">旅游资讯</a></li>
 				<li><a href="ticket(pc).html" >机票订购</a></li>
-				<li><a href="scencry(pc).html">风景欣赏</a></li>
-				<li><a href="about(pc).html#">公司简介</a></li>
+				<li><a href="#">风景欣赏</a></li>
+				<li><a href="#">公司简介</a></li>
 			</ul>
 		</nav>
 	</div>
