移动端界面

--- a/html5实例/ticket(pc).html
+++ b/html5实例/ticket(pc).html
@@ -94,13 +94,13 @@
 			</div>
 		</div>
 	</aside>
-	<div class="list ticket">
-		<h2>机票订购</h2>
+	<div class="list ticket">		
 		<form action="" method="">
-			<div class="type">
+			<h2>机票预定</h2>
+			<fieldset class="type">
 				<p>航班类型 <mark>单程</mark> 往返</p>
-			</div>
-			<div class="form left">
+			</fieldset>
+			<fieldset class="form left">
 				<p>
 					<label for="form_city">出发城市</label>
 					<input type="text" name="form_city" id="form_city" placeholder="城市名">
@@ -109,8 +109,8 @@
 					<label for="to_city">返回城市</label>
 					<input type="text" name="to_city" id="to_city" placeholder="城市名">
 				</p>
-			</div>
-			<div class="form right">
+			</fieldset>
+			<fieldset class="form right">
 				<p>
 					<label for="form_data">出发时间</label>
 					<input type="text" name="form_data" id="form_data" placeholder="城市名">
@@ -119,12 +119,12 @@
 					<label for="to_data">返回时间</label>
 					<input type="text" name="to_data" id="to_data" placeholder="城市名">
 				</p>
-			</div>
-			<div class="form button">
+			</fieldset>
+			<fieldset class="form button">
 				<p>
 					<button type="submit" class="submit">订票</button>
 				</p>	
-			</div>
+			</fieldset>
 		</form>
 		<div class="new">
 			<h2>最新机票</h2>
