--- a/html5实例/移动端/about(pc).html
+++ b/html5实例/移动端/about(pc).html
@@ -2,153 +2,58 @@
 <html lang="zh-cn">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,inital-scale=1.0,user-scalable=no">
 	<title>项目实战--PC端固定布局</title>
-	<link rel="stylesheet" type="text/css" href="column(pc).css">
 	<link rel="stylesheet" type="text/css" href="basic.css">
 </head>
 <body>
 <header id="header">
-	<div class="center">
-		<h1 class="logo">瓢城旅行社</h1>
 		<nav class="link">
-			<h1 class="none">网站导航</h1>
 			<ul>
 				<li><a href="index(pc).html">首页</a></li>
-				<li><a href="information(pc).html">旅游资讯</a></li>
-				<li><a href="ticket(pc).html">机票订购</a></li>
-				<li><a href="scencry(pc).html">风景欣赏</a></li>
-				<li class="active"><a href="about(pc).html">公司简介</a></li>
+				<li><a href="information(pc).html">资讯</a></li>
+				<li><a href="ticket(pc).html">票务</a></li>
+				<li class="active"><a href="about(pc).html">关于</a></li>
 			</ul>
 		</nav>
-	</div>
 </header>
-
-<div id="headerline">
-	<div class="center">
-		<hgroup>
-			<h2>旅游资讯</h2>
-			<h3>介绍各种旅游景点</h3>
-		</hgroup>
-	</div>
+<!-- <header>header</header> -->
+<div id="headline">
+	<img src="images/tour1.jpg">
+	<hgroup>
+		<h2>公司简介</h2>
+		<h3>介绍各种最新旅游信息、资讯要闻、景点攻略等</h3>
+	</hgroup>
 </div>
 
-<div id="container">
-	<aside class="sidebar">
-		<div class="recommend sidebox">
-			<h2>景点推荐</h2>
-			<div class="tag">
-				<ul>			
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="hot sidebox">
-			<h2>热门旅游</h2>
-			<div class="figure">
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-			</div>
-		</div>
-		<div class="treasure sidebox">
-			<h2>旅游百宝箱</h2>
-			<div class="box">
-				<a href="#">东京(12)</a>
-				<a href="#">东京(12)</a>
-				<a href="#">东京(12)</a>
-				<a href="#">东京(12)</a>
-			</div>
-		</div>
-	</aside>
-	<div class="list about">
-		<section>
-			<h2>关于我们</h2>
-			<p>百度文库生活休闲宇宙的九大定律四大原则_生活休闲暂无评价|0人阅读|0次下载|举报文档宇宙的九大定律四大原则_生活休闲。宇宙的九大定律四大原则o大一、...</p>
-			<p>百度文库生活休闲宇宙的九大定律四大原则_生活休闲暂无评价|0人阅读|0次下载|举报文档宇宙的九大定律四大原则_生活休闲。宇宙的九大定律四大原则 o 大 一、...</p>
-			<p>百度文库生活休闲宇宙的九大定律四大原则_生活休闲暂无评价|0人阅读|0次下载|举报文档宇宙的九大定律四大原则_生活休闲。宇宙的九大定律四大原则 o 大 一、...</p>
-		</section>
-		<p>&nbsp;</p>
-		<section>
-			<h2>联系方式</h2>
-			<address>
-				<ul>
-					<li>1</li>
-					<li>2</li>
-					<li>3</li>
-					<li>4</li>
-				</ul>
-			</address>
-		</section>
-		
-	</div>
+<div class="list about">
+	<section>
+		<h2>关于我们</h2>
+		<p>瓢城旅行社旅游网创立于 2006 年 10月，以“让旅游更简单”为使命，为消费者提供由北京、上海、广州、深圳等64个城市出发的旅游产品预订服务，产品全面，
+			价格透明，全年 365 天 24 小时 400 电话预订，并提供丰富的后续服务和保障。</p>
+		<p>目前，瓢城旅行社旅游网提供 8 万余种旅游产品供消费者选择，涵盖跟团、
+			自助、自驾、邮轮、酒店、签证、景区门票以及公司旅游等，已成功服务累计超过 400 万
+			人次出游。</p>
+		<p>同时基于瓢城旅行社旅游网全球中文景点目录以及中文旅游社区，可以更
+			好地帮助游客了解目的地信息，妥善制定好出游计划，并方便地预订旅程中的服务项目。</p>
+	</section>
+	<section>
+		<h2>联系方式</h2>
+		<address>
+			<ul>
+				<li>瓢城旅行社股份有限公司</li>
+				<li>地址：江苏省盐城市亭湖区大庆中路 1234 号</li>
+				<li>邮编：1234567</li>
+				<li>电话：010-88888888</li>
+				<li>传真：010-88666666</li>
+			</ul>
+		</address>
+	</section>
 </div>
 
 <footer id="footer">
 	<div class="top">
-		<div class="left area">
-			<h2>合作伙伴</h2>
-			<hr>
-			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-			</ul>
-		</div>
-		<div class="center area">
-			<h2>合作伙伴</h2>
-			<hr>
-			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-			</ul>
-		</div>
-		<div class="right area">
-			<h2>合作伙伴</h2>
-			<hr>
-			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-			</ul>
-		</div>
+		客户端 | 触屏版 | 电脑版
 	</div>
 	<div class="bottom">
 		Copyright © YUYU 瓢城web俱乐部
