--- a/html5实例/移动端/index(pc).html
+++ b/html5实例/移动端/index(pc).html
@@ -13,7 +13,7 @@
 				<li class="active"><a href="index(pc).html">首页</a></li>
 				<li><a href="information(pc).html">资讯</a></li>
 				<li><a href="ticket(pc).html">票务</a></li>
-				<li><a href="#">关于</a></li>
+				<li><a href="about(pc).html">关于</a></li>
 			</ul>
 		</nav>
 </header>
