--- a/html5实例/移动端/information(pc).html
+++ b/html5实例/移动端/information(pc).html
@@ -2,172 +2,102 @@
 <html lang="zh-cn">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,inital-scale=1.0,user-scalable=no">
 	<title>项目实战--PC端固定布局</title>
-	<link rel="stylesheet" type="text/css" href="column(pc).css">
 	<link rel="stylesheet" type="text/css" href="basic.css">
 </head>
 <body>
 <header id="header">
-	<div class="center">
-		<h1 class="logo">瓢城旅行社</h1>
 		<nav class="link">
-			<h1 class="none">网站导航</h1>
 			<ul>
 				<li><a href="index(pc).html">首页</a></li>
-				<li class="active"><a href="information(pc).html">旅游资讯</a></li>
-				<li><a href="ticket(pc).html" >机票订购</a></li>
-				<li><a href="#">风景欣赏</a></li>
-				<li><a href="#">公司简介</a></li>
+				<li class="active"><a href="information(pc).html">资讯</a></li>
+				<li><a href="ticket(pc).html">票务</a></li>
+				<li><a href="about(pc).html">关于</a></li>
 			</ul>
 		</nav>
-	</div>
 </header>
-
-<div id="headerline">
-	<div class="center">
-		<hgroup>
-			<h2>旅游资讯</h2>
-			<h3>介绍各种旅游景点</h3>
-		</hgroup>
-	</div>
+<!-- <header>header</header> -->
+<div id="headline">
+	<img src="images/tour1.jpg">
+	<hgroup>
+		<h2>旅游咨询</h2>
+		<h3>介绍各种最新旅游信息、资讯要闻、景点攻略等</h3>
+	</hgroup>
 </div>
-
-<div id="container">
-	<aside class="sidebar">
-		<div class="recommend sidebox">
-			<h2>景点推荐</h2>
-			<div class="tag">
-				<ul>			
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="hot sidebox">
-			<h2>热门旅游</h2>
-			<div class="figure">
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-			</div>
-		</div>
-		<div class="treasure sidebox">
-			<h2>旅游百宝箱</h2>
-			<div class="box">
-				<a href="#">东京(12)</a>
-				<a href="#">东京(12)</a>
-				<a href="#">东京(12)</a>
-				<a href="#">东京(12)</a>
-			</div>
-		</div>
-	</aside>
-	<div class="list information">
-		<div class="infor">
-			<ul class="left">
-				<li><a href="###">限时特价</a></li>
-				<li><a href="###">热门推荐</a></li>
-			</ul>
-			<ul class="right">
-				<li><a href="###" class="selected">推荐</a></li>
-				<li><a href="###">折扣</a></li>
-				<li><a href="###">价格</a></li>
-			</ul>
-		</div>
-		<div class="tour">
-			<figure>
-				<img src="images/tour1.jpg" alt="曼谷一日游">
-				<figcaption>
-					<article>
-						<header>
-							<hgroup>
-								<h2>曼谷芭提雅一日游</h2>
-								<h3>包团特惠，超丰富景点</h3>
-							</hgroup>
-						</header>
-						<ol>
-							<li><mark>交通</mark>：</li>
-							<li><mark>团期</mark>：</li>
-						</ol>
-						<div class="buy">
-							<div class="price">￥<strong>3980</strong><s>原价 ￥10000</s></div>
-							<div class="reserve"><a href="#">立即抢购</a></div>
-						</div>
-						<div class="disc"><span>4.7折</span></div>
-						<footer>本团由web瓢城俱乐部所有,截止于<time>2016-12-31</time></footer>
-					</article>
-				</figcaption>
-			</figure>
-			
-			<div class="more">加载更多。。。</div>
-		</div>
+<div class="list information">
+	<h2>热门景点</h2>
+	<div class="content">
+		<figure>
+			<img src="images/tour2.jpg" alt="" />
+			<figcaption>
+				<h2 class="title">曼谷-芭提雅 6 日游</h2>
+				<h3 class="nav_title">包团特惠，超丰富景点，升级 1 晚国五，无自费，赠送 600 元</h3>
+				<div class="price">￥<strong>2076</strong>元起</div>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="images/tour2.jpg" alt="" />
+			<figcaption>
+				<h2 class="title">曼谷-芭提雅 6 日游</h2>
+				<h3 class="nav_title">包团特惠，超丰富景点，升级 1 晚国五，无自费，赠送 600 元</h3>
+				<div class="price">￥<strong>2076</strong>元起</div>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="images/tour2.jpg" alt="" />
+			<figcaption>
+				<h2 class="title">曼谷-芭提雅 6 日游</h2>
+				<h3 class="nav_title">包团特惠，超丰富景点，升级 1 晚国五，无自费，赠送 600 元</h3>
+				<div class="price">￥<strong>2076</strong>元起</div>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="images/tour2.jpg" alt="" />
+			<figcaption>
+				<h2 class="title">曼谷-芭提雅 6 日游</h2>
+				<h3 class="nav_title">包团特惠，超丰富景点，升级 1 晚国五，无自费，赠送 600 元</h3>
+				<div class="price">￥<strong>2076</strong>元起</div>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="images/tour2.jpg" alt="" />
+			<figcaption>
+				<h2 class="title">曼谷-芭提雅 6 日游</h2>
+				<h3 class="nav_title">包团特惠，超丰富景点，升级 1 晚国五，无自费，赠送 600 元</h3>
+				<div class="price">￥<strong>2076</strong>元起</div>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="images/tour2.jpg" alt="" />
+			<figcaption>
+				<h2 class="title">曼谷-芭提雅 6 日游</h2>
+				<h3 class="nav_title">包团特惠，超丰富景点，升级 1 晚国五，无自费，赠送 600 元</h3>
+				<div class="price">￥<strong>2076</strong>元起</div>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="images/tour2.jpg" alt="" />
+			<figcaption>
+				<h2 class="title">曼谷-芭提雅 6 日游</h2>
+				<h3 class="nav_title">包团特惠，超丰富景点，升级 1 晚国五，无自费，赠送 600 元</h3>
+				<div class="price">￥<strong>2076</strong>元起</div>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="images/tour2.jpg" alt="" />
+			<figcaption>
+				<h2 class="title">曼谷-芭提雅 6 日游</h2>
+				<h3 class="nav_title">包团特惠，超丰富景点，升级 1 晚国五，无自费，赠送 600 元</h3>
+				<div class="price">￥<strong>2076</strong>元起</div>
+			</figcaption>
+		</figure>
 	</div>
 </div>
 
 <footer id="footer">
 	<div class="top">
-		<div class="left area">
-			<h2>合作伙伴</h2>
-			<hr>
-			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-			</ul>
-		</div>
-		<div class="center area">
-			<h2>合作伙伴</h2>
-			<hr>
-			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-			</ul>
-		</div>
-		<div class="right area">
-			<h2>合作伙伴</h2>
-			<hr>
-			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-			</ul>
-		</div>
+		客户端 | 触屏版 | 电脑版
 	</div>
 	<div class="bottom">
 		Copyright © YUYU 瓢城web俱乐部
