--- a/html5实例/移动端/ticket(pc).html
+++ b/html5实例/移动端/ticket(pc).html
@@ -2,105 +2,36 @@
 <html lang="zh-cn">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,inital-scale=1.0,user-scalable=no">
 	<title>项目实战--PC端固定布局</title>
-	<link rel="stylesheet" type="text/css" href="column(pc).css">
 	<link rel="stylesheet" type="text/css" href="basic.css">
 </head>
 <body>
 <header id="header">
-	<div class="center">
-		<h1 class="logo">瓢城旅行社</h1>
 		<nav class="link">
-			<h1 class="none">网站导航</h1>
 			<ul>
 				<li><a href="index(pc).html">首页</a></li>
-				<li><a href="information(pc).html">旅游资讯</a></li>
-				<li class="active"><a href="ticket(pc).html">机票订购</a></li>
-				<li><a href="scencry(pc).html">风景欣赏</a></li>
-				<li><a href="about(pc).html">公司简介</a></li>
+				<li><a href="information(pc).html">资讯</a></li>
+				<li class="active"><a href="ticket(pc).html">票务</a></li>
+				<li><a href="about(pc).html">关于</a></li>
 			</ul>
 		</nav>
-	</div>
 </header>
-
-<div id="headerline">
-	<div class="center">
-		<hgroup>
-			<h2>旅游资讯</h2>
-			<h3>介绍各种旅游景点</h3>
-		</hgroup>
-	</div>
+<!-- <header>header</header> -->
+<div id="headline">
+	<img src="images/tour1.jpg">
+	<hgroup>
+		<h2>票务查询</h2>
+		<h3>介绍各种最新旅游信息、资讯要闻、景点攻略等</h3>
+	</hgroup>
 </div>
-
-<div id="container">
-	<aside class="sidebar">
-		<div class="recommend sidebox">
-			<h2>景点推荐</h2>
-			<div class="tag">
-				<ul>			
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-					<li><a href="#">东京(12)</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="hot sidebox">
-			<h2>热门旅游</h2>
-			<div class="figure">
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-				<figure>
-					<img src="images/tour2.jpg">
-					<figcaption>曼谷六日旅游</figcaption>
-				</figure>
-			</div>
-		</div>
-		<div class="treasure sidebox">
-			<h2>旅游百宝箱</h2>
-			<div class="box">
-				<a href="#">东京(12)</a>
-				<a href="#">东京(12)</a>
-				<a href="#">东京(12)</a>
-				<a href="#">东京(12)</a>
-			</div>
-		</div>
-	</aside>
-	<div class="list ticket">
-		<h2>机票订购</h2>
-		<form action="" method="">
-			<div class="type">
+<div class="list ticket">
+	<form action="" method="">
+			<h2>机票预定</h2>
+			<fieldset class="type">
 				<p>航班类型 <mark>单程</mark> 往返</p>
-			</div>
-			<div class="form left">
+			</fieldset>
+			<fieldset class="form">
 				<p>
 					<label for="form_city">出发城市</label>
 					<input type="text" name="form_city" id="form_city" placeholder="城市名">
@@ -109,8 +40,8 @@
 					<label for="to_city">返回城市</label>
 					<input type="text" name="to_city" id="to_city" placeholder="城市名">
 				</p>
-			</div>
-			<div class="form right">
+			</fieldset>
+			<fieldset class="form">
 				<p>
 					<label for="form_data">出发时间</label>
 					<input type="text" name="form_data" id="form_data" placeholder="城市名">
@@ -119,12 +50,12 @@
 					<label for="to_data">返回时间</label>
 					<input type="text" name="to_data" id="to_data" placeholder="城市名">
 				</p>
-			</div>
-			<div class="form button">
+			</fieldset>
+			<fieldset class="form">
 				<p>
 					<button type="submit" class="submit">订票</button>
 				</p>	
-			</div>
+			</fieldset>
 		</form>
 		<div class="new">
 			<h2>最新机票</h2>
@@ -143,8 +74,8 @@
 						<th>路线</th>
 						<th>日期</th>
 						<th>价格</th>
-						<th>税费</th>
-						<th>餐食</th>
+						<th class="min">税费</th>
+						<th class="min">餐食</th>
 						<th>航班</th>
 						<th>预定</th>
 					</tr>
@@ -154,8 +85,8 @@
 						<td>北京-成都</td>
 						<td>10-15</td>
 						<td class="price">￥476</td>
-						<td>￥45</td>
-						<td>无</td>
+						<td class="min">￥45</td>
+						<td class="min">无</td>
 						<td>南方航空</td>
 						<td><a href="#" class="reserve">预定</a></td>
 					</tr>
@@ -163,8 +94,8 @@
 						<td>北京-成都</td>
 						<td>10-15</td>
 						<td class="price">￥476</td>
-						<td>￥45</td>
-						<td>无</td>
+						<td class="min">￥45</td>
+						<td class="min">无</td>
 						<td>南方航空</td>
 						<td><a href="#" class="reserve">预定</a></td>
 					</tr>
@@ -172,8 +103,8 @@
 						<td>北京-成都</td>
 						<td>10-15</td>
 						<td class="price">￥476</td>
-						<td>￥45</td>
-						<td>无</td>
+						<td class="min">￥45</td>
+						<td class="min">无</td>
 						<td>南方航空</td>
 						<td><a href="#" class="reserve">预定</a></td>
 					</tr>
@@ -181,8 +112,8 @@
 						<td>北京-成都</td>
 						<td>10-15</td>
 						<td class="price">￥476</td>
-						<td>￥45</td>
-						<td>无</td>
+						<td class="min">￥45</td>
+						<td class="min">无</td>
 						<td>南方航空</td>
 						<td><a href="#" class="reserve">预定</a></td>
 					</tr>
@@ -190,8 +121,8 @@
 						<td>北京-成都</td>
 						<td>10-15</td>
 						<td class="price">￥476</td>
-						<td>￥45</td>
-						<td>无</td>
+						<td class="min">￥45</td>
+						<td class="min">无</td>
 						<td>南方航空</td>
 						<td><a href="#" class="reserve">预定</a></td>
 					</tr>
@@ -199,8 +130,8 @@
 						<td>北京-成都</td>
 						<td>10-15</td>
 						<td class="price">￥476</td>
-						<td>￥45</td>
-						<td>无</td>
+						<td class="min">￥45</td>
+						<td class="min">无</td>
 						<td>南方航空</td>
 						<td><a href="#" class="reserve">预定</a></td>
 					</tr>
@@ -208,8 +139,8 @@
 						<td>北京-成都</td>
 						<td>10-15</td>
 						<td class="price">￥476</td>
-						<td>￥45</td>
-						<td>无</td>
+						<td class="min">￥45</td>
+						<td class="min">无</td>
 						<td>南方航空</td>
 						<td><a href="#" class="reserve">预定</a></td>
 					</tr>
@@ -217,8 +148,8 @@
 						<td>北京-成都</td>
 						<td>10-15</td>
 						<td class="price">￥476</td>
-						<td>￥45</td>
-						<td>无</td>
+						<td class="min">￥45</td>
+						<td class="min">无</td>
 						<td>南方航空</td>
 						<td><a href="#" class="reserve">预定</a></td>
 					</tr>
@@ -231,41 +162,11 @@
 				</tfoot>
 			</table>
 		</div>
-	</div>
+	</div> 
 </div>
-
 <footer id="footer">
 	<div class="top">
-		<div class="left area">
-			<h2>合作伙伴</h2>
-			<hr>
-			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-			</ul>
-		</div>
-		<div class="center area">
-			<h2>合作伙伴</h2>
-			<hr>
-			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-			</ul>
-		</div>
-		<div class="right area">
-			<h2>合作伙伴</h2>
-			<hr>
-			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-			</ul>
-		</div>
+		客户端 | 触屏版 | 电脑版
 	</div>
 	<div class="bottom">
 		Copyright © YUYU 瓢城web俱乐部
